# OAData

./: .gitignore  CLAUDE.md  README.md  config.toml  pyproject.toml
docs/: email_from_office_address.md  mandate_classification.md  pub_db_access_handoff.md  roadmap.md  rollout_checklist.md  sharepoint_demo_runbook.md  sharepoint_list_design.md  sop.md  summary.md  techSpec.md  zenodo_design.md
scripts/: demo_sharepoint.py  diag_sharepoint_fields.py  md_to_docx.py  probe_zenodo_multipart.py  run_auto.sh
src/oa_tracker/: __init__.py  __main__.py  actions.py  auto.py  cli.py  config.py  db.py  emails.py  pub_db.py  report.py  scanner.py  sharepoint.py  sheet.py  status.py  zenodo.py
templates/: completion.txt  handover.txt  reminder.txt  zenodo_cheat.txt
tests/: conftest.py  test_actions.py  test_auto.py  test_cli_action.py  test_cli_reopen.py  test_db.py  test_emails.py  test_pub_db.py  test_report.py  test_scanner.py  test_sharepoint.py  test_sheet.py  test_zenodo.py
