[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "oa-tracker"
version = "0.1.0"
description = "CLI tool for tracking Open Access publication data archiving workflows"
requires-python = ">=3.12"
dependencies = ["typer>=0.9"]

[project.scripts]
oa = "oa_tracker.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
